# tapes

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  app.py  art.py  cleaning.py  downloader.py  fingerprint.py  gunicorn.conf.py  llm_cleaning.py  models.py  podcasts.py  proxy_auth.py  pyproject.toml  scan.py  youtube.py
docs/: roadmap.md
routes/: __init__.py  auth.py  downloads.py  index.py  library.py  podcasts.py  serving.py  stream.py
scripts/: fix_in_istanbul_album.py  generate_samples.py  retag-fix.py  retag-pi.sh
static/css/: index.css  player.css  primitives.css  structural.css  tokens.css
static/js/: player.js
templates/: index.html
