[project]
name = "music"
version = "0.1.0"
description = "Personal cassette-deck music streamer for the home stack"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "mutagen>=1.47.0",
    "pillow>=10.3.0",
]

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
line-length = 100
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "TID"]
